選考一覧 ロジック作成
