# back/project/app/OpenAPI/api.yaml
@@ -415,6 +415,18 @@ paths:
             type: integer
           description: 仕事カテゴリid
           required: false
+        - in: query
+          name: userName
+          schema:
+            type: string
+          description: ユーザー名
+          required: false
+        - in: query
+          name: selfPr
+          schema:
+            type: string
+          description: 自己PR
+          required: false
       responses:
         "200":
           description: 応募一覧
@@ -423,7 +435,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/entry"
+                  $ref: "#/components/schemas/responseJobEntry"
     post:
       tags:
         - "entry"
@@ -579,6 +591,12 @@ components:
         jobCategoryId:
           type: integer
           description: 仕事カテゴリid
+        userName:
+          type: string
+          description: ユーザー名
+        selfPr:
+          type: string
+          description: 自己PR
     queryUserList:
       description: クエリパラメータ 会員一覧
       type: object
@@ -682,7 +700,7 @@ components:
           description: 仕事id
         userId:
           type: integer
-          description: 会員id
+          description: ユーザーid
       required:
         - jobId
         - jobCategoryId
@@ -738,6 +756,26 @@ components:
       required:
         - email
         - password
+    responseJobEntry:
+      description: レスポンス 仕事応募内容
+      type: object
+      properties:
+        entryId:
+          type: integer
+          description: エントリーid
+        entryDate:
+          type: string
+          format: date
+          description: エントリー日時
+        user:
+          $ref: "#/components/schemas/user"
+          description: ユーザー情報
+        job:
+          $ref: "#/components/schemas/job"
+          description: 仕事情報
+      required:
+        - jobId
+        - jobCategoryId
     jobCategory:
       description: 職種
       type: object
@@ -856,9 +894,6 @@ components:
         email:
           type: string
           description: メールアドレス
-        password:
-          type: string
-          description: パスワード
         selfPr:
           type: string
           description: 自己PR
@@ -873,6 +908,12 @@ components:
           type: string
           format: date
           description: 作成日時
+      required:
+        - id
+        - name
+        - email
+        - selfPr
+        - tel
     filePath:
       description: ファイルパス
       type: object
